--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "npm": "^6.4.1",
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-material-design-icons": "^1.4.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vue-material-design-icons": "1.4.0"
+    "vue-touch": "^2.0.0-beta.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
